--- a/home/templates/home/main.html
+++ b/home/templates/home/main.html
@@ -15,10 +15,10 @@
     <title></title>
 
     <!-- Bootstrap core CSS -->
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../static/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="/static/css/starter-template.css" rel="stylesheet">
+    <link href="../../static/css/starter-template.css" rel="stylesheet">
 
 </head>
 
@@ -49,7 +49,7 @@
 
     <div class="container">
 
-        <div class="starter-template">
+        <div class="../../starter-template">
             <h1>Bootstrap starter template</h1>
             <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text
                 and a mostly barebones HTML document.</p>
@@ -61,8 +61,8 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="/static/js/jquery.min.js"></script>
-    <script src="/static/js/bootstrap.min.js"></script>
+    <script src="../../static/js/jquery.min.js"></script>
+    <script src="../../static/js/bootstrap.min.js"></script>
 
 </body>
 
