--- a/home/templates/home/main.html
+++ b/home/templates/home/main.html
@@ -64,6 +64,16 @@
     <script src="../../static/js/jquery.min.js"></script>
     <script src="../../static/js/bootstrap.min.js"></script>
 
+        <h1>게시판 페이지입니다</h1>
+        <table>
+            {% for list in postlist %}
+            <ul>
+                <li>{{list.title}}</li>
+                <li>{{list.pub_date}}</li>
+            </ul>
+            {% endfor %}
+        </table>
+
 </body>
 
 </html>
