--- a/home/templates/team.html
+++ b/home/templates/team.html
@@ -1,6 +1,6 @@
-{% extends 'main.html' %}
+{% extends 'base.html' %}
 
-{% block ourteam %}
+{% block content %}
 <!-- Start team Area -->
 <div id="team" class="our-team-area area-padding">
     <div class="container">
