Mongodb 사용으로 변경
1. mongodb를 사용하게끔 변경 - db 변경시 기존 db는 날아감.
 - python manage.py makemigrations
 - python manage.py migrate
 - python manage.py createsuperuser
후 사용 가능

2. 게시판 detail 페이지 라우팅 수정

3. 쓸데없는 파일 제거, 코드 정리

--- a/home/templates/board.html
+++ b/home/templates/board.html
@@ -7,7 +7,7 @@
 <table>
     {% for list in postlist %}
     <ul>
-        <li><a href="{{list.pk}}/">{{list.title}}<span>{{list.pub_date}}</span></a></li>
+        <li><a href="{% url 'viewboard' pk=list.pk %}">{{list.title}} <span>{{list.pub_date}}</span></a></li>
     </ul>
     {% endfor %}
 </table>
