--- a/home/templates/viewboard.html
+++ b/home/templates/viewboard.html
@@ -1,6 +1,8 @@
-<body>
+{% extends 'base.html' %}
+
+{% block content %}
     <h1>게시글 개별 페이지입니다</h1>
     <p>{{post.title}}</p>
     <p>{{post.text}}</p>
     <p>{{post.pub_date}}</p>
-</body>
+{% endblock %}
