라우팅 수정 및 template 정리
1. 라우팅 수정 : home에서 시작
2. home/home 안열리게 수정
3. template 정리
   - home.html 삭제
   - base.html에서 시작
   - main.html 동작 안되는 부분 수정
   - header, footer부분 base.html로 이동
   - static 파일 경로 수정

--- a/home/templates/team.html
+++ b/home/templates/team.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
 <!-- Start team Area -->
 <div id="team" class="our-team-area area-padding">
     <div class="container">
@@ -17,7 +18,7 @@
                     <div class="single-team-member">
                         <div class="team-img">
                             <a href="#">
-                                <img src="../../static/img/team/1.jpg" alt="">
+                                <img src="/static/img/team/1.jpg" alt="">
                             </a>
                             <div class="team-social-icon text-center">
                                 <ul>
@@ -50,7 +51,7 @@
                     <div class="single-team-member">
                         <div class="team-img">
                             <a href="#">
-                                <img src="../../static/img/team/2.jpg" alt="">
+                                <img src="/static/img/team/2.jpg" alt="">
                             </a>
                             <div class="team-social-icon text-center">
                                 <ul>
@@ -83,7 +84,7 @@
                     <div class="single-team-member">
                         <div class="team-img">
                             <a href="#">
-                                <img src="../../static/img/team/3.jpg" alt="">
+                                <img src="/static/img/team/3.jpg" alt="">
                             </a>
                             <div class="team-social-icon text-center">
                                 <ul>
@@ -116,7 +117,7 @@
                     <div class="single-team-member">
                         <div class="team-img">
                             <a href="#">
-                                <img src="../../static/img/team/4.jpg" alt="">
+                                <img src="/static/img/team/4.jpg" alt="">
                             </a>
                             <div class="team-social-icon text-center">
                                 <ul>
@@ -150,4 +151,5 @@
     </div>
 </div>
 <!-- End Team Area -->
+
 {% endblock %}
