--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -1,68 +1,193 @@
+{% load static %}
 <!DOCTYPE html>
-<!-- saved from url=(0049)http://bootstrapk.com/examples/starter-template/# -->
 <html lang="en">
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
+    <title>또봄 Template</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="http://bootstrapk.com/favicon.ico">
-
-    <title></title>
-
+    
     <!-- Bootstrap core CSS -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="/static/css/starter-template.css" rel="stylesheet">
+    <!-- Libraries CSS Files -->
+    <link href="/static/lib/nivo-slider/css/nivo-slider.css" rel="stylesheet">
+    <link href="/static/lib/owlcarousel/owl.carousel.css" rel="stylesheet">
+    <link href="/static/lib/owlcarousel/owl.transitions.css" rel="stylesheet">
+    <link href="/static/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/static/lib/animate/animate.min.css" rel="stylesheet">
+    <link href="/static/lib/venobox/venobox.css" rel="stylesheet">
 
+    <!-- Nivo Slider Theme -->
+    <link href="/static/css/nivo-slider-theme.css" rel="stylesheet">
+    
+    <!-- Main Stylesheet File -->
+    <link href="/static/css/style.css" rel="stylesheet">
+    
+    <!-- Responsive Stylesheet File -->
+    <link href="/static/css/responsive.css" rel="stylesheet">
+    
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700|Raleway:300,400,400i,500,500i,700,800,900" rel="stylesheet">
 </head>
 
-<body>
-
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+<body data-spy="scroll" data-target="#navbar-example">
+<header>
+    <!-- header-area start -->
+    <div id="sticker" class="header-area">
         <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-                    aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="http://bootstrapk.com/examples/starter-template/#">project name</a>
+            <div class="row">
+                <div class="col-md-12 col-sm-12">
+                    <!-- Navigation -->
+                    <nav class="navbar navbar-default">
+                        <div class="navbar-header">
+                            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                                data-target=".bs-example-navbar-collapse-1" aria-expanded="false">
+                                <span class="sr-only">Toggle navigation</span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                            </button>
+                            <a class="navbar-brand page-scroll sticky-logo" href="{% url 'home' %}">
+                                <img src="/static/img/logo.png" class="logo" alt="">
+                            </a>
+                        </div>
+                        <div class="collapse navbar-collapse main-menu bs-example-navbar-collapse-1"
+                            id="navbar-example">
+                            <ul class="nav navbar-nav navbar-right">
+                                <li class="active">
+                                    <a class="page-scroll" href="#home">Home</a>
+                                </li>
+                                <li>
+                                    <a class="page-scroll" href="#about">About</a>
+                                </li>
+                                <li>
+                                    <a class="page-scroll" href="#services">Services</a>
+                                </li>
+                                <li>
+                                    <a class="page-scroll" href="#team">Team</a>
+                                </li>
+                                <li>
+                                    <a class="page-scroll" href="#portfolio">Portfolio</a>
+                                </li>
+
+                                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Drop
+                                        Down<span class="caret"></span></a>
+                                    <ul class="dropdown-menu" role="menu">
+                                        <li><a href=#>Drop Down 1</a></li>
+                                        <li><a href=#>Drop Down 2</a></li>
+                                    </ul>
+                                </li>
+
+                                <li>
+                                    <a class="page-scroll" href="#blog">News</a>
+                                </li>
+                                <li>
+                                    <a class="page-scroll" href="#contact">Contact</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <!-- navbar-collapse -->
+                    </nav>
+                    <!-- END: Navigation -->
+                </div>
             </div>
-            <div id="navbar" class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="http://bootstrapk.com/examples/starter-template/#">Home</a></li>
-                    <li><a href="http://bootstrapk.com/examples/starter-template/#about">About</a></li>
-                    <li><a href="http://bootstrapk.com/examples/starter-template/#contact">Contact</a></li>
-                </ul>
+        </div>
+    </div>
+    <!-- header-area end -->
+</header>
+<!-- header end -->
+
+    {% block content %}
+    
+    {% endblock %}
+
+<!-- Start Footer bottom Area -->
+<footer>
+    <div class="footer-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 col-sm-4 col-xs-12">
+                    <div class="footer-content">
+                        <div class="footer-head">
+                            <div class="footer-logo">
+                                <h2>또봄</h2>
+                            </div>
+
+                            <p>내용</p>
+                            <div class="footer-icons">
+                                <ul>
+                                    <li>
+                                        <a href="#"><i class="fa fa-facebook"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><i class="fa fa-twitter"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><i class="fa fa-google"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><i class="fa fa-pinterest"></i></a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- end single footer -->
+                <div class="col-md-4 col-sm-4 col-xs-12">
+                    <div class="footer-content">
+                        <div class="footer-head">
+                            <h4>information</h4>
+                            <p>
+                                설명
+                            </p>
+                            <div class="footer-contacts">
+                                <p><span>Tel:</span> 010-9414-4879</p>
+                                <p><span>Email:</span> webmaster@iseeuagain.com</p>
+                                <p><span>Working Hours:</span> 9am-6pm</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- end single footer -->
+                <div class="col-md-4 col-sm-4 col-xs-12">
+                    <div class="footer-content">
+                        <div class="footer-head">
+                            <h4>Instagram</h4>
+                            <div class="flicker-img">
+                                <a href="#"><img src="/static/img/portfolio/1.jpg" alt=""></a>
+                                <a href="#"><img src="/static/img/portfolio/2.jpg" alt=""></a>
+                                <a href="#"><img src="/static/img/portfolio/3.jpg" alt=""></a>
+                                <a href="#"><img src="/static/img/portfolio/4.jpg" alt=""></a>
+                                <a href="#"><img src="/static/img/portfolio/5.jpg" alt=""></a>
+                                <a href="#"><img src="/static/img/portfolio/6.jpg" alt=""></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <!--/.nav-collapse -->
         </div>
-    </nav>
-
-    <div class="container">
-
-        <div class="../../starter-template">
-            {% block content %}
-            {% endblock %}
+    </div>
+    <div class="footer-area-bottom">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 col-sm-12 col-xs-12">
+                    <div class="copyright text-center">
+                        <p>
+                            &copy; Copyright <strong>또봄</strong>. All Rights Reserved
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
-
-    </div><!-- /.container -->
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="/static/js/jquery.min.js"></script>
-    <script src="/static/js/bootstrap.min.js"></script>
-
+    </div>
+</footer>
 
 </body>
 
