--- a/home/templates/main.html
+++ b/home/templates/main.html
@@ -1,127 +1,16 @@
-{% load static %}
-<!DOCTYPE html>
-<!-- saved from url=(0049)http://bootstrapk.com/examples/starter-template/# -->
-<html lang="ko">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>또봄 Template</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="http://bootstrapk.com/favicon.ico">
-    
-    <!-- Favicons -->
-    <link href="../../static/img/favicon.png" rel="icon">
-    <link href="../../static/img/apple-touch-icon.png" rel="apple-touch-icon">
-    
-    <!-- Google Fonts -->
-    <link
-        href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700|Raleway:300,400,400i,500,500i,700,800,900"
-        rel="stylesheet">
-    
-    <!-- Bootstrap CSS File -->
-    <link href="../../static/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    
-    <!-- Libraries CSS Files -->
-    <link href="../../static/lib/nivo-slider/css/nivo-slider.css" rel="stylesheet">
-    <link href="../../static/lib/owlcarousel/owl.carousel.css" rel="stylesheet">
-    <link href="../../static/lib/owlcarousel/owl.transitions.css" rel="stylesheet">
-    <link href="../../static/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="../../static/lib/animate/animate.min.css" rel="stylesheet">
-    <link href="../../static/lib/venobox/venobox.css" rel="stylesheet">
-    <title></title>
-    <!-- Nivo Slider Theme -->
-    <link href="../../static/css/nivo-slider-theme.css" rel="stylesheet">
-    
-    <!-- Main Stylesheet File -->
-    <link href="../../static/css/style.css" rel="stylesheet">
-    
-    <!-- Responsive Stylesheet File -->
-    <link href="../../static/css/responsive.css" rel="stylesheet">
-
-    <!-- Bootstrap core CSS -->
-    <link href="../../static/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="../../static/css/starter-template.css" rel="stylesheet">
-
-</head>
-<!--//head --->
-
-<body data-spy="scroll" data-target="#navbar-example">
+{% extends 'base.html' %}
+{% block content %}
   <div id="preloader"></div>
-  <header>
-    <!-- header-area start -->
-    <div id="sticker" class="header-area">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 col-sm-12">
-            <!-- Navigation -->
-            <nav class="navbar navbar-default">
-              <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".bs-example-navbar-collapse-1" aria-expanded="false">
-										<span class="sr-only">Toggle navigation</span>
-										<span class="icon-bar"></span>
-										<span class="icon-bar"></span>
-										<span class="icon-bar"></span>
-									</button>
-                <a class="navbar-brand page-scroll sticky-logo" href="main.html">
-                    <img src="../../static/img/logo.png" class="logo" alt="">
-								</a>
-              </div>
-              <div class="collapse navbar-collapse main-menu bs-example-navbar-collapse-1" id="navbar-example">
-                <ul class="nav navbar-nav navbar-right">
-                  <li class="active">
-                    <a class="page-scroll" href="#home">Home</a>
-                  </li>
-                  <li>
-                    <a class="page-scroll" href="#about">About</a>
-                  </li>
-                  <li>
-                    <a class="page-scroll" href="#services">Services</a>
-                  </li>
-                  <li>
-                    <a class="page-scroll" href="#team">Team</a>
-                  </li>
-                  <li>
-                    <a class="page-scroll" href="#portfolio">Portfolio</a>
-                  </li>
-
-                  <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Drop Down<span class="caret"></span></a>
-                    <ul class="dropdown-menu" role="menu">
-                      <li><a href=# >Drop Down 1</a></li>
-                      <li><a href=# >Drop Down 2</a></li>
-                    </ul> 
-                  </li>
-
-                  <li>
-                    <a class="page-scroll" href="#blog">News</a>
-                  </li>
-                  <li>
-                    <a class="page-scroll" href="#contact">Contact</a>
-                  </li>
-                </ul>
-              </div>
-              <!-- navbar-collapse -->
-            </nav>
-            <!-- END: Navigation -->
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- header-area end -->
-  </header>
-  <!-- header end -->
 
   <!-- Start Slider Area -->
   <div id="home" class="slider-area">
     <div class="bend niceties preview-2">
       <div id="ensign-nivoslider" class="slides">
-        <img src="../../static/img/img_about.jpg" alt="" title="#slider-direction-1" />
-        <img src="../../static/img/business.jpg" alt="" title="#slider-direction-2" />
-        <img src="../../static/img/" alt="" title="#slider-direction-3" />
+        <img src="/static/img/img_about.jpg" alt="" title="#slider-direction-1" />
+        <img src="/static/img/business.jpg" alt="" title="#slider-direction-2" />
+        <!--
+          <img src="img/" alt="" title="#slider-direction-3" />
+        -->
       </div>
 
       <!-- direction 1 -->
@@ -185,7 +74,7 @@
           <div class="well-left">
             <div class="single-well">
               <a href="#">
-								  <img src="../../static/img/img_about02.png" alt="">
+								  <img src="/static/img/img_about02.png" alt="">
 								</a>
             </div>
           </div>
@@ -510,7 +399,7 @@
           <div class="single-team-member">
             <div class="team-img">
               <a href="#">
-                <img src="../../static/img/team/1.jpg" alt="">
+                <img src="/static/img/team/1.jpg" alt="">
               </a>
               <div class="team-social-icon text-center">
                 <ul>
@@ -543,7 +432,7 @@
           <div class="single-team-member">
             <div class="team-img">
               <a href="#">
-                <img src="../../static/img/team/2.jpg" alt="">
+                <img src="/static/img/team/2.jpg" alt="">
               </a>
               <div class="team-social-icon text-center">
                 <ul>
@@ -576,7 +465,7 @@
           <div class="single-team-member">
             <div class="team-img">
               <a href="#">
-                <img src="../../static/img/team/3.jpg" alt="">
+                <img src="/static/img/team/3.jpg" alt="">
               </a>
               <div class="team-social-icon text-center">
                 <ul>
@@ -609,7 +498,7 @@
           <div class="single-team-member">
             <div class="team-img">
               <a href="#">
-                <img src="../../static/img/team/4.jpg" alt="">
+                <img src="/static/img/team/4.jpg" alt="">
               </a>
               <div class="team-social-icon text-center">
                 <ul>
@@ -681,10 +570,10 @@
           <div class="col-md-4 col-sm-4 col-xs-12 design development">
             <div class="single-awesome-project">
               <div class="awesome-img">
-                <a href="#"><img src="../../static/img/portfolio/1.jpg" alt="" /></a>
+                <a href="#"><img src="/static/img/portfolio/1.jpg" alt="" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
-                    <a class="venobox" data-gall="myGallery" href="../../static/img/portfolio/1.jpg">
+                    <a class="venobox" data-gall="myGallery" href="/static/img/portfolio/1.jpg">
                       <h4>Business City</h4>
                       <span>Web Development</span>
                     </a>
@@ -698,10 +587,10 @@
           <div class="col-md-4 col-sm-4 col-xs-12 photo">
             <div class="single-awesome-project">
               <div class="awesome-img">
-                <a href="#"><img src="../../static/img/portfolio/2.jpg" alt="" /></a>
+                <a href="#"><img src="/static/img/portfolio/2.jpg" alt="" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
-                    <a class="venobox" data-gall="myGallery" href="../../static/img/portfolio/2.jpg">
+                    <a class="venobox" data-gall="myGallery" href="/static/img/portfolio/2.jpg">
                       <h4>Blue Sea</h4>
                       <span>Photosho</span>
                     </a>
@@ -715,10 +604,10 @@
           <div class="col-md-4 col-sm-4 col-xs-12 design">
             <div class="single-awesome-project">
               <div class="awesome-img">
-                <a href="#"><img src="../../static/img/portfolio/3.jpg" alt="" /></a>
+                <a href="#"><img src="/static/img/portfolio/3.jpg" alt="" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
-                    <a class="venobox" data-gall="myGallery" href="../../static/img/portfolio/3.jpg">
+                    <a class="venobox" data-gall="myGallery" href="/static/img/portfolio/3.jpg">
                       <h4>Beautiful Nature</h4>
                       <span>Web Design</span>
                     </a>
@@ -732,10 +621,10 @@
           <div class="col-md-4 col-sm-4 col-xs-12 photo development">
             <div class="single-awesome-project">
               <div class="awesome-img">
-                <a href="#"><img src="../../static/img/portfolio/4.jpg" alt="" /></a>
+                <a href="#"><img src="/static/img/portfolio/4.jpg" alt="" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
-                    <a class="venobox" data-gall="myGallery" href="../../static/img/portfolio/4.jpg">
+                    <a class="venobox" data-gall="myGallery" href="/static/img/portfolio/4.jpg">
                       <h4>Creative Team</h4>
                       <span>Web design</span>
                     </a>
@@ -749,10 +638,10 @@
           <div class="col-md-4 col-sm-4 col-xs-12 development">
             <div class="single-awesome-project">
               <div class="awesome-img">
-                <a href="#"><img src="../../static/img/portfolio/5.jpg" alt="" /></a>
+                <a href="#"><img src="/static/img/portfolio/5.jpg" alt="" /></a>
                 <div class="add-actions text-center text-center">
                   <div class="project-dec">
-                    <a class="venobox" data-gall="myGallery" href="../../static/img/portfolio/5.jpg">
+                    <a class="venobox" data-gall="myGallery" href="/static/img/portfolio/5.jpg">
                       <h4>Beautiful Flower</h4>
                       <span>Web Development</span>
                     </a>
@@ -766,10 +655,10 @@
           <div class="col-md-4 col-sm-4 col-xs-12 design photo">
             <div class="single-awesome-project">
               <div class="awesome-img">
-                <a href="#"><img src="../../static/img/portfolio/6.jpg" alt="" /></a>
+                <a href="#"><img src="/static/img/portfolio/6.jpg" alt="" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
-                    <a class="venobox" data-gall="myGallery" href="../../static/img/portfolio/6.jpg">
+                    <a class="venobox" data-gall="myGallery" href="/static/img/portfolio/6.jpg">
                       <h4>Night Hill</h4>
                       <span>Photoshop</span>
                     </a>
@@ -803,7 +692,7 @@
             <div class="single-blog">
               <div class="single-blog-img">
                 <a href="blog.html">
-										<img src="../../static/img/blog/7.jpg" alt="">
+										<img src="/static/img/blog/7.jpg" alt="">
 									</a>
               </div>
               <div class="blog-text">
@@ -823,7 +712,7 @@
             <div class="single-blog">
               <div class="single-blog-img">
                 <a href="blog.html">
-										<img src="../../static/img/blog/8.jpg" alt="">
+										<img src="/static/img/blog/8.jpg" alt="">
 									</a>
               </div>
               <div class="blog-text">
@@ -843,7 +732,7 @@
             <div class="single-blog">
               <div class="single-blog-img">
                 <a href="blog.html">
-										<img src="../../static/img/blog/9.jpg" alt="">
+										<img src="/static/img/blog/9.jpg" alt="">
 									</a>
               </div>
               <div class="blog-text">
@@ -956,115 +845,23 @@
   </div>
   <!-- End Contact Area -->
 
-  <!-- Start Footer bottom Area -->
-  <footer>
-    <div class="footer-area">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-4 col-sm-4 col-xs-12">
-            <div class="footer-content">
-              <div class="footer-head">
-                <div class="footer-logo">
-                  <h2>또봄</h2>
-                </div>
-
-                <p>내용</p>
-                <div class="footer-icons">
-                  <ul>
-                    <li>
-                      <a href="#"><i class="fa fa-facebook"></i></a>
-                    </li>
-                    <li>
-                      <a href="#"><i class="fa fa-twitter"></i></a>
-                    </li>
-                    <li>
-                      <a href="#"><i class="fa fa-google"></i></a>
-                    </li>
-                    <li>
-                      <a href="#"><i class="fa fa-pinterest"></i></a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- end single footer -->
-          <div class="col-md-4 col-sm-4 col-xs-12">
-            <div class="footer-content">
-              <div class="footer-head">
-                <h4>information</h4>
-                <p>
-                  설명
-                </p>
-                <div class="footer-contacts">
-                  <p><span>Tel:</span> 010-9414-4879</p>
-                  <p><span>Email:</span> webmaster@iseeuagain.com</p>
-                  <p><span>Working Hours:</span> 9am-6pm</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- end single footer -->
-          <div class="col-md-4 col-sm-4 col-xs-12">
-            <div class="footer-content">
-              <div class="footer-head">
-                <h4>Instagram</h4>
-                <div class="flicker-img">
-                  <a href="#"><img src="../../static/img/portfolio/1.jpg" alt=""></a>
-                  <a href="#"><img src="../../static/img/portfolio/2.jpg" alt=""></a>
-                  <a href="#"><img src="../../static/img/portfolio/3.jpg" alt=""></a>
-                  <a href="#"><img src="../../static/img/portfolio/4.jpg" alt=""></a>
-                  <a href="#"><img src="../../static/img/portfolio/5.jpg" alt=""></a>
-                  <a href="#"><img src="../../static/img/portfolio/6.jpg" alt=""></a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="footer-area-bottom">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 col-sm-12 col-xs-12">
-            <div class="copyright text-center">
-              <p>
-                &copy; Copyright <strong>또봄</strong>. All Rights Reserved
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </footer>
-
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
+  <!-- JavaScript Libraries -->
+  <script src="/static/lib/jquery/jquery.min.js"></script>
+  <script src="/static/lib/bootstrap/js/bootstrap.min.js"></script>
+  <script src="/static/lib/owlcarousel/owl.carousel.min.js"></script>
+  <script src="/static/lib/venobox/venobox.min.js"></script>
+  <script src="/static/lib/knob/jquery.knob.js"></script>
+  <script src="/static/lib/wow/wow.min.js"></script>
+  <script src="/static/lib/parallax/parallax.js"></script>
+  <script src="/static/lib/easing/easing.min.js"></script>
+  <script src="/static/lib/nivo-slider/js/jquery.nivo.slider.js" type="text/javascript"></script>
+  <script src="/static/lib/appear/jquery.appear.js"></script>
+  <script src="/static/lib/isotope/isotope.pkgd.min.js"></script>
+  
+  <!-- Contact Form JavaScript File -->
+  <script src="/contactform/contactform.js"></script>
+  <script src="/static/js/main.js"></script>
 
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-
-    <!-- JavaScript Libraries -->
-    <script src="../../static/lib/jquery/jquery.min.js"></script>
-    <script src="../../static/lib/bootstrap/js/bootstrap.min.js"></script>
-    <script src="../../static/lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="../../static/lib/venobox/venobox.min.js"></script>
-    <script src="../../static/lib/knob/jquery.knob.js"></script>
-    <script src="../../static/lib/wow/wow.min.js"></script>
-    <script src="../../static/lib/parallax/parallax.js"></script>
-    <script src="../../static/lib/easing/easing.min.js"></script>
-    <script src="../../static/lib/nivo-slider/js/jquery.nivo.slider.js"></script>
-    <script src="../../static/lib/appear/jquery.appear.js"></script>
-    <script src="../../static/lib/isotope/isotope.pkgd.min.js"></script>
-    
-    <!-- Contact Form JavaScript File -->
-    <script src="contactform/contactform.js"></script>
-    
-    <script src="../../static/js/jquery.min.js"></script>
-    <script src="../../static/js/main.js"></script>
-    <script src="../../static/js/bootstrap.min.js"></script>
-</body>
-
-</html>
+{% endblock %}
