이미지를 게시판에서 보여주기 위한것을 추가했습니다 pip install pillow  #이미지를 처리할수 있는 라이브러리 Pillow를 추가해야합니다. python manage.py makemigrations python3 manage.py migrate 새로 마이그래이션 해줘야 합니다.

--- a/home/templates/viewboard.html
+++ b/home/templates/viewboard.html
@@ -6,5 +6,9 @@
     <p>{{post.title}}</p>
     <p>{{post.text}}</p>
     <p>{{post.pub_date}}</p>
-
+    {% if post.mainphoto %}
+    <img src="{{ post.mainphoto.url }}" alt="" height="600">
+    <br>
+    {% endif %}
+    <a href="/home/board/">목록으로</a>
 {% endblock %}
