--- a/home/templates/activity.html
+++ b/home/templates/activity.html
@@ -1,1 +1,229 @@
-<!--활동모습 페이지-->
+<!DOCTYPE html>
+<html lang="ko">
+
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<title>활동모습</title>
+	<!-- head style add-->
+	{% load static %}
+
+	<link rel="stylesheet" href="css/activity.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
+
+
+</head>
+
+<body>
+	{% extends 'base.html' %}
+	{% block content %}
+
+	<!-- start activity contents -->
+
+
+
+	<!-- Page Content -->
+	<div class="container">
+
+		<!-- Heading Row -->
+		<div class="row align-items-center my-5">
+			<div class="col-lg-7">
+				<img class="img-fluid rounded mb-4 mb-lg-0" src="http://bycherry1.cafe24.com/web/img/sample_thum_02.jpg" alt="">
+			</div>
+			<!-- /.col-lg-7 -->
+
+
+			<div class="col-lg-5">
+				<h1 class="font-weight-light">암 경험자를 세상 밖으로</h1>
+				<p>암밍아웃’. 자신이 암 경험자라는 사실을 스스로 밝히는 일을 뜻하는 표현이다. 암 병력(病歷)을 주위 사람들에게 밝히는 데에도 큰 용기가 필요하다는 것을 성적 지향을 밝히는 ‘커밍아웃’에 빗댄 말이다. 암을 ‘죽음의 병’으로 생각하는 사회적 시선은 당사자들의 사회 복귀에 커다란 걸림돌이 된다.</p>
+				<a class="btn btn-primary" href="#">더보기..</a>
+			</div>
+			<!-- /.col-lg-5 -->
+		</div>
+		<!-- /.Heading Row -->
+
+
+		<!-- subtitle -->
+		<div class="card text-white bg-secondary my-5 py-4 text-center">
+			<div class="card-body">
+				<p class="text-white m-0">당신의 새로운 내일을 위해 또봄이 언제나 함께 하겠습니다. See You Again :D</p>
+			</div>
+		</div>
+		<!-- /.subtitle -->
+
+
+		<!-- Page Features -->
+		<div class="row text-center">
+			<!-- contents_1 -->
+			<div class="col-lg-3 col-md-6 mb-4">
+				<div class="card h-100">
+					<img class="card-img-top" src="http://bycherry1.cafe24.com/web/img/sample_thum_01.jpg" alt="">
+					<div class="card-body">
+						<h4 class="card-title">3만 장의 마스크를 기부</h4>
+						<p class="card-text">고통을 겪고 있는 아이들에게 신종 코로나바이러스 감염증(코로나19) 예방을 위해 제공될 예정이다.</p>
+					</div>
+					<div class="card-footer">
+						<a href="#" class="btn btn-primary">더 보기..</a>
+					</div>
+				</div>
+			</div>
+			<!-- /.contents_1 -->
+
+			<!-- contents_2 -->
+			<div class="col-lg-3 col-md-6 mb-4">
+				<div class="card h-100">
+					<img class="card-img-top" src="http://bycherry1.cafe24.com/web/img/sample_thum_03.jpg" alt="">
+					<div class="card-body">
+						<h4 class="card-title">암 경험자 정서적 지지 활동 협력</h4>
+						<p class="card-text">암 조기검진, 치료기술 발달 등으로 암생존율이 증가함에 따라 암 경험자들에 대한 사회적 인식을 개선하고 이들에 대한 사회복귀를 지원하기 위해 기획됐다.</p>
+					</div>
+					<div class="card-footer">
+						<a href="#" class="btn btn-primary">더 보기..</a>
+					</div>
+				</div>
+			</div>
+
+			<!-- /.contents_2 -->
+
+			<!-- contents_3 -->
+			<div class="col-lg-3 col-md-6 mb-4">
+				<div class="card h-100">
+					<img class="card-img-top" src="http://bycherry1.cafe24.com/web/img/sample_thum_04.jpg" alt="">
+					<div class="card-body">
+						<h4 class="card-title">투병물품 무상지원</h4>
+						<p class="card-text">히크만주머니 3개와 면마스크 3개, 응원엽서 등이 담긴 투병물품을 무상으로 지원한다</p>
+					</div>
+					<div class="card-footer">
+						<a href="#" class="btn btn-primary">더 보기..</a>
+					</div>
+				</div>
+			</div>
+			<!-- /.contents_3 -->
+
+			<!-- contents_4 -->
+			<div class="col-lg-3 col-md-6 mb-4">
+				<div class="card h-100">
+					<img class="card-img-top" src="http://bycherry1.cafe24.com/web/img/sample_thum_05.jpg" alt="">
+					<div class="card-body">
+						<h4 class="card-title">언택트 사회공헌활동 진행</h4>
+						<p class="card-text">따뜻한 나눔 활동으로 지역사회에 훈훈한 사랑을 실천해 나가겠다.이날 임직원들이 3개월동안 모금한 사랑의 동전 저금통도 전달했다.</p>
+					</div>
+					<div class="card-footer">
+						<a href="#" class="btn btn-primary">더 보기..</a>
+					</div>
+				</div>
+			</div>
+			<!-- /.contents_4 -->
+
+			<!-- contents_4 -->
+			<div class="col-lg-3 col-md-6 mb-4">
+				<div class="card h-100">
+					<img class="card-img-top" src="http://bycherry1.cafe24.com/web/img/sample_thum_05.jpg" alt="">
+					<div class="card-body">
+						<h4 class="card-title">언택트 사회공헌활동 진행</h4>
+						<p class="card-text">따뜻한 나눔 활동으로 지역사회에 훈훈한 사랑을 실천해 나가겠다.이날 임직원들이 3개월동안 모금한 사랑의 동전 저금통도 전달했다.</p>
+					</div>
+					<div class="card-footer">
+						<a href="#" class="btn btn-primary">더 보기..</a>
+					</div>
+				</div>
+			</div>
+			<!-- /.contents_4 -->
+
+			<!-- contents_4 -->
+			<div class="col-lg-3 col-md-6 mb-4">
+				<div class="card h-100">
+					<img class="card-img-top" src="http://bycherry1.cafe24.com/web/img/sample_thum_05.jpg" alt="">
+					<div class="card-body">
+						<h4 class="card-title">언택트 사회공헌활동 진행</h4>
+						<p class="card-text">따뜻한 나눔 활동으로 지역사회에 훈훈한 사랑을 실천해 나가겠다.이날 임직원들이 3개월동안 모금한 사랑의 동전 저금통도 전달했다.</p>
+					</div>
+					<div class="card-footer">
+						<a href="#" class="btn btn-primary">더 보기..</a>
+					</div>
+				</div>
+			</div>
+			<!-- /.contents_4 -->
+
+			<!-- contents_4 -->
+			<div class="col-lg-3 col-md-6 mb-4">
+				<div class="card h-100">
+					<img class="card-img-top" src="http://bycherry1.cafe24.com/web/img/sample_thum_05.jpg" alt="">
+					<div class="card-body">
+						<h4 class="card-title">언택트 사회공헌활동 진행</h4>
+						<p class="card-text">따뜻한 나눔 활동으로 지역사회에 훈훈한 사랑을 실천해 나가겠다.이날 임직원들이 3개월동안 모금한 사랑의 동전 저금통도 전달했다.</p>
+					</div>
+					<div class="card-footer">
+						<a href="#" class="btn btn-primary">더 보기..</a>
+					</div>
+				</div>
+			</div>
+			<!-- /.contents_4 -->
+
+			<!-- contents_4 -->
+			<div class="col-lg-3 col-md-6 mb-4">
+				<div class="card h-100">
+					<img class="card-img-top" src="http://bycherry1.cafe24.com/web/img/sample_thum_05.jpg" alt="">
+					<div class="card-body">
+						<h4 class="card-title">언택트 사회공헌활동 진행</h4>
+						<p class="card-text">따뜻한 나눔 활동으로 지역사회에 훈훈한 사랑을 실천해 나가겠다.이날 임직원들이 3개월동안 모금한 사랑의 동전 저금통도 전달했다.</p>
+					</div>
+					<div class="card-footer">
+						<a href="#" class="btn btn-primary">더 보기..</a>
+					</div>
+				</div>
+			</div>
+
+			<!-- btn -->
+			<nav aria-label="Page navigation example">
+				<ul class="pagination">
+					<li class="page-item">
+						<a class="page-link" href="#" aria-label="Previous">
+							<span aria-hidden="true">&laquo;</span>
+						</a>
+					</li>
+					<li class="page-item"><a class="page-link" href="#">1</a></li>
+					<li class="page-item"><a class="page-link" href="#">2</a></li>
+					<li class="page-item"><a class="page-link" href="#">3</a></li>
+					<li class="page-item">
+						<a class="page-link" href="#" aria-label="Next">
+							<span aria-hidden="true">&raquo;</span>
+						</a>
+					</li>
+				</ul>
+			</nav>
+			
+
+			<!-- /. btn -->
+
+			<!-- /.contents_4 -->
+
+		</div>
+		<!-- /.row Page Features -->
+
+
+ 
+  
+  
+	</div>
+	<!-- /.container -->
+
+
+	<!-- ##### All Javascript Script ##### -->
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+
+
+
+
+
+
+
+
+
+	<!-- end start activity contents -->
+	{% endblock %}
+</body></html>
