--- a/home/templates/establish.html
+++ b/home/templates/establish.html
@@ -1,1 +1,30 @@
 <!--설립취지 페이지-->
+{% extends 'base.html' %}
+{% block content %}
+
+<div class="container mt-3">
+    
+      <div class="card mb-3" style="min-width: 360px;">
+          <div class="row no-gutters">
+            <div class="col-md-4">
+              <img src="http://kyca.or.kr/img/img_about.jpg" class="card-img p-3" alt="...">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+               
+                <p class="card-text">20, 30대 암 경험자들이 병을 이겨낼 수 있는 매개체를 제공하고 지속적으로 그들에게
+                  삶을 가치 있게 살고 싶게 하는 가치를 제공하는 커뮤니티이자 비영리 기업</p>
+                <p class="card-text"><small class="text-muted">‘당신을 또 봅니다(I See U Again)’라는 이름은 ‘당신을 건강한 모습을 다시 보고 싶다’라는 의미이며,
+                  줄여서 ‘또봄’이라 부르며 ‘또, 다시 봄’이란 의미를 내포하고 있습니다.
+                  또봄은 20~30대 암환우들에게 극복의지를 주고, 여행을 테마로 병과 싸워 이겨낼 수 있는 원동력을 제공하며,
+                  지속적으로 미래의 희망적인 삶을 이끌어 갈 수 있도록 돕는 커뮤니티이자 그들에 대한 부정적인 사회적 인식을
+                  개선하고자 하는 국내 최초의 2030대를 돕는 유일무이한 커뮤니티입니다.
+                  또봄은 5개월만에 말기암을 극복한 경험자가 최초로 만든 커뮤니티로써 암 극복자들과 2030대 암환우를 돕고자 하는
+                  마음을 가진 서포터즈와 후원인들로 구성되었으며, 지속장기적으로 돕고 성장하고자 사회적 기업을 준비 중에 있습니다.</small></p>
+              </div>
+            </div>
+          </div>
+        </div>
+  </div>
+  
+{% endblock %}
