--- a/home/templates/activity.html
+++ b/home/templates/activity.html
@@ -1,19 +1,6 @@
-<!DOCTYPE html>
-<html lang="ko">
 
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<title>활동모습</title>
-	<!-- head style add-->
 	{% load static %}
 
-	<link rel="stylesheet" href="css/activity.css">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-
-
-
-</head>
 
 <body>
 	{% extends 'base.html' %}
@@ -202,6 +189,10 @@
 		</div>
 		<!-- /.row Page Features -->
 
+<!--123-->
+
+
+<!-- /. 123 -->
 
  
   
@@ -226,4 +217,4 @@
 
 	<!-- end start activity contents -->
 	{% endblock %}
-</body></html>
+</body>
