--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -12,6 +12,9 @@
     <meta name="description" content="">
     <meta name="author" content="">
     
+    <!-- activity custom css -->
+    <link href="/static/css/activity.css" rel="stylesheet">
+    
     <!-- Bootstrap core CSS -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
 
