--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -12,8 +12,9 @@
     <meta name="description" content="">
     <meta name="author" content="">
     
-    <!-- activity custom css -->
-    <link href="/static/css/activity.css" rel="stylesheet">
+    <!-- Main Stylesheet File 
+    <link href="/static/css/style.css" rel="stylesheet">
+    -->
     
     <!-- Bootstrap core CSS -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
@@ -28,9 +29,6 @@
 
     <!-- Nivo Slider Theme -->
     <link href="/static/css/nivo-slider-theme.css" rel="stylesheet">
-    
-    <!-- Main Stylesheet File -->
-    <link href="/static/css/style.css" rel="stylesheet">
     
     <!-- Responsive Stylesheet File -->
     <link href="/static/css/responsive.css" rel="stylesheet">
@@ -121,8 +119,6 @@
                             <div class="footer-logo">
                                 <h2>또봄</h2>
                             </div>
-
-                            <p>내용</p>
                             <div class="footer-icons">
                                 <ul>
                                     <li>
@@ -159,21 +155,6 @@
                     </div>
                 </div>
                 <!-- end single footer -->
-                <div class="col-md-4 col-sm-4 col-xs-12">
-                    <div class="footer-content">
-                        <div class="footer-head">
-                            <h4>Instagram</h4>
-                            <div class="flicker-img">
-                                <a href="#"><img src="/static/img/portfolio/1.jpg" alt=""></a>
-                                <a href="#"><img src="/static/img/portfolio/2.jpg" alt=""></a>
-                                <a href="#"><img src="/static/img/portfolio/3.jpg" alt=""></a>
-                                <a href="#"><img src="/static/img/portfolio/4.jpg" alt=""></a>
-                                <a href="#"><img src="/static/img/portfolio/5.jpg" alt=""></a>
-                                <a href="#"><img src="/static/img/portfolio/6.jpg" alt=""></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
