extra_script block added

--- a/home/templates/activity.html
+++ b/home/templates/activity.html
@@ -1,4 +1,9 @@
 	{% extends 'base.html' %}
+
+	{% block extra_script %}
+		<link href="/static/css/activity.css" rel="stylesheet">
+    {% endblock %}
+
 	{% block content %}
 
 	<!-- start activity contents -->
