--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -35,6 +35,8 @@
     
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700|Raleway:300,400,400i,500,500i,700,800,900" rel="stylesheet">
+    {% block extra_script %}
+    {% endblock %}
 </head>
 
 <body data-spy="scroll" data-target="#navbar-example">
