--- a/home/templates/support.html
+++ b/home/templates/support.html
@@ -1,1 +1,101 @@
 <!--후원페이지-->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>후원 참여</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <!-- Bootstrap core CSS -->
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Libraries CSS Files -->
+    <link href="/static/lib/nivo-slider/css/nivo-slider.css" rel="stylesheet">
+    <link href="/static/lib/owlcarousel/owl.carousel.css" rel="stylesheet">
+    <link href="/static/lib/owlcarousel/owl.transitions.css" rel="stylesheet">
+    <link href="/static/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/static/lib/animate/animate.min.css" rel="stylesheet">
+    <link href="/static/lib/venobox/venobox.css" rel="stylesheet">
+
+    <!-- Nivo Slider Theme -->
+    <link href="/static/css/nivo-slider-theme.css" rel="stylesheet">
+
+    <!-- Main Stylesheet File -->
+    <link href="/static/css/style.css" rel="stylesheet">
+
+    <!-- Responsive Stylesheet File -->
+    <link href="/static/css/responsive.css" rel="stylesheet">
+
+    <!-- Google Fonts -->
+    <link
+        href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700|Raleway:300,400,400i,500,500i,700,800,900"
+        rel="stylesheet">
+</head>
+
+<body>
+    
+    <div class="container">
+        <ul class="nav nav-tabs">
+            <li class="nav-item">
+                <a class="nav-link active" href="#">Active</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+            </li>
+        </ul>
+        <div class="page-header">
+            <div class="col-md-6 col-md-offset-3">
+                <h3>후원 참여자 정보 기록</h3>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-offset-3">
+            <form role="form">
+                <div class="form-group">
+                    <label for="inputName">성명</label>
+                    <input type="text" class="form-control" id="inputName" placeholder="이름을 입력해 주세요">
+                </div>
+                <div class="form-group">
+                    <label for="inputMobile">연락처</label>
+                    <input type="tel" class="form-control" id="inputMobile" placeholder="휴대폰번호를 입력해 주세요">
+                </div>
+                <div class="form-group">
+                    <label for="InputEmail">이메일 주소</label>
+                    <input type="email" class="form-control" id="InputEmail" placeholder="이메일 주소를 입력해주세요">
+                </div>
+                <div class="form-group">
+                    <label for="exampleFormControlTextarea1">내용</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="후원 내용 및 문의 사항" rows="3"></textarea>
+                </div>
+                <div class="form-group form-check">
+                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                    <label class="form-check-label" for="exampleCheck1">개인정보 수집 동의</label>
+                    <p style="font-size: 13px; padding-left: 15px;">후원자의 인적사항을 기록하기 위해 또는 문의사항 접수 및 처리를 위해 위와 같이 개인정보를 수집합니다.<br>
+                    개인정보 수집 동의를 거부할 수있으며, 거부시 문의가 불가할 수 있습니다.</p>
+                </div>
+                <div class="form-group text-center">
+                    <button type="submit" id="join-submit" class="btn btn-primary">
+                        보내기<i class="fa fa-check spaceLeft"></i>
+                    </button>
+                    <button type="submit" class="btn btn-warning">
+                        취소<i class="fa fa-times spaceLeft"></i>
+                    </button>
+                </div>
+            </form>
+        </div>
+
+    </div>
+</body>
+
+</html>
