게시글작성

--- a/home/templates/board.html
+++ b/home/templates/board.html
@@ -11,5 +11,6 @@
         <li><a href="{% url 'viewboard' pk=list.pk %}">{{list.title}} <span>{{list.pub_date}}</span></a></li>
     </ul>
     {% endfor %}
+    <button><a href="newpost/">글쓰기</a></button>
 </table>
 {% endblock %}
