--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -12,6 +12,9 @@
     <meta name="description" content="">
     <meta name="author" content="">
     
+    <!--templates css-->
+    <link rel="stylesheet" href="/static/css/business.css">
+    
     <!-- Main Stylesheet File 
     <link href="/static/css/style.css" rel="stylesheet">
     -->
