--- a/home/templates/business.html
+++ b/home/templates/business.html
@@ -1,1 +1,44 @@
 <!--사업소개 페이지-->
+{% extends 'base.html' %}
+
+{% block content %}
+
+<div class="business_wrap">
+    <div class="business_main">
+        <div class="b_intro_txt">
+            젊은 암 경험자를 지원, 소통하는<br>
+            국내 최초 비영리 기관
+        </div>
+        <img src="/static/img/mainslide1.png" class="" alt="당신을 또 봅시다">
+    </div>
+    <!--//business_main-->
+    <div class="b_cont_wrap">
+        <div class="b_tit">
+            <h4>사업 소개</h4>
+        </div>
+        <div class="b_cont">
+            <h5 class="">극복의지 프로젝트</h5>
+            <strong class="mt-0">01 여행버킷리스트</strong>
+                <p>암투병 중인 환자가 완치 후 가고싶은 해외여행지를 설정, 달성 시 동행 및 여행경비 지원</p>
+            <strong class="mt-0">02 여행포토북</strong>
+                <p>여행버킷리스트를 가고 싶은 의지를 불러일으킬 수 있는 매개체</p>
+            <strong class="mt-0">03 해피 바이러스 봉사</strong>
+                <p>암을 극복한 사람들이 암환자에게 전하는 해피 바이러스 봉사</p>
+        
+            <h5>소통 프로젝트</h5>
+            <strong class="mt-0">01 여행버킷리스트</strong>
+                <p>암환자와 소통하고 응원할 수 있는 소셜 채널 만들기</p>
+            <strong class="mt-0">02 힐링 콘서트</strong>
+                <p>여행버킷리스트를 가고 싶은 의지를 불러일으킬 수 있는 매개체</p>
+            <strong class="mt-0">03 소셜기부 챌린지</strong>
+                <p>치료비가 부족하여 치료가 어려운 2030대 암환자에게 치료비 지원하기</p>
+            <strong class="mt-0">04 암 극복 후 재취업 지원</strong>
+                <p>암을 극복한 사람들이 암환자에게 전하는 해피 바이러스 봉사</p>
+        </div>
+        <!--//b_cont-->        
+    </div>
+    <!--//b_cont_wrap-->
+</div>
+<!--//business_wrap-->
+
+{% endblock %}
