--- a/home/templates/map.html
+++ b/home/templates/map.html
@@ -3,9 +3,10 @@
 
 {%block content %}
 <div class="container">
-    <h1 class="text-center">오시는 길</h1>
+    <h2 class="text-center">오시는 길</h1>
     <hr>
     <div class="row">
+        <!--지도 시작-->
         <div class="col-sm-8">
 
             <div id="daumRoughmapContainer1606110905572" class="col-sm-8 root_daum_roughmap root_daum_roughmap_landing">
@@ -25,8 +26,9 @@
                 }).render();
             </script>
         </div>
-        <!-- End Map -->
+        <!--//지도 끝 -->
 
+        <!--연락처 및 주소-->
         <div class="col-sm-4" id="contact2">
             <h3>후원 문의 및 연락처</h3>
             <hr align="left" width="50%">
@@ -39,6 +41,7 @@
             <h4 class="pt-2">YouTube</h4>
             "또또봄tv"<br>
         </div>
+        <!--//연락처 및 주소-->
     </div>
 </div>
 
