--- a/home/templates/event.html
+++ b/home/templates/event.html
@@ -12,7 +12,7 @@
     <body>
         <style type="text/css">
             .jumbotron {
-                background-image: url('event_img1.png');
+                background-image: url('../static/img/event/event_img1.png');
                 background-size: cover;
                 color: white;
                 text-shadow: black 0.2em 0.2em 0.2em;
@@ -23,7 +23,7 @@
         <div class="jumbotron">
             <h1 class="text-center">여행버킷챌린지 '앎' 캠페인</h1>
         </div>
-        
+        <p class="text-center"><img src="../static/img/event/event_img2.png" alt="" class="img-responsive"></p>
       
       </div>
     </body>
