--- a/home/templates/main.html
+++ b/home/templates/main.html
@@ -30,34 +30,34 @@
           <header>또봄</header>
             <ul>
               <li>
-                <a href="establish.html">
+                <a href="establish">
                   <i class="fas fa-seedling"></i>설립취지</a>
               </li>
               <li>
-                <a href="business.html">
+                <a href="business">
                   <i class="far fa-lightbulb"></i>사업소개</a>
               </li>
               <li>
-                <a href="activity.html">
+                <a href="activity">
                   <i class="fas fa-icons"></i>또봄활동</a>
               </li>
               <li>
-                <a href="news.html">
+                <a href="news">
                   <i class="fas fa-newspaper"></i>News</a>
               </li>
-              <li><a href="scontent.html">
+              <li><a href="scontent">
                   <i class="fab fa-youtube"></i>Social</a>
               </li>
               <li>
-                <a href="event.html">
+                <a href="event">
                   <i class="fas fa-paper-plane"></i>Event</a>
               </li>
               <li>
-                <a href="support.html">
+                <a href="support">
                   <i class="fas fa-heart"></i>후원</a>
               </li>
               <li>
-                <a href="map.html">
+                <a href="map">
                   <i class="fas fa-map-marker-alt"></i>Contact</a>
               </li>
             </ul>
