지지인 24일 작업본

--- a/home/templates/main.html
+++ b/home/templates/main.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
-    <meta charset="utf-8">
-    <title>또봄</title>
-    <meta name="description" content="또봄페이지">
-    <!--ress css-->
-    <link rel="stylesheet" href="https//uppkg.com/ress/dist/ress.min.css">
-    <!--main CSS-->
-    <link rel="stylesheet" href="/static/css/main.css">
-    <!--font-->
-    <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-  </head>
-  <body>
+
+<head>
+  <meta charset="utf-8">
+  <title>또봄</title>
+  <meta name="description" content="또봄페이지">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!--ress css-->
+  <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
+  <!--main CSS-->
+  <link rel="stylesheet" href="/static/css/main.css">
+  <!--font-->
+  <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic"
+    rel="stylesheet">
+  <!--icons-->
+  <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+</head>
+
+
+<body>
   <div id="home" class="big-bg">
     <div class="main-nav">
       <input type="checkbox" id="check">
@@ -22,21 +30,51 @@
       </label>
       <div class="sidebar">
         <header>또봄</header>
-          <ul>
-            <li><a href="establish"><i class="fas fa-seedling"></i>설립취지</a></li>
-            <li><a href="business"><i class="far fa-lightbulb"></i>사업소개</a></li>
-            <li><a href="activity"><i class="fas fa-icons"></i>또봄활동</a></li>
-            <li><a href="news"><i class="fas fa-newspaper"></i>News</a></li>
-            <li><a href="scontent"><i class="fab fa-youtube"></i>Social</a></li>
-            <li><a href="event"><i class="fas fa-paper-plane"></i>Event</a></li>
-            <li><a href="support"><i class="fas fa-heart"></i>후원</a></li>
-            <li><a href="map"><i class="fas fa-map-marker-alt"></i>Contact</a></li>
-          </ul>
+        <ul>
+          <li>
+            <a href="establish.html">
+              <i class="fas fa-seedling"></i>설립취지</a>
+          </li>
+          <li>
+            <a href="business.html">
+              <i class="far fa-lightbulb"></i>사업소개</a>
+          </li>
+          <li>
+            <a href="activity.html">
+              <i class="fas fa-icons"></i>또봄활동</a>
+          </li>
+          <li>
+            <a href="news.html">
+              <i class="fas fa-newspaper"></i>News</a>
+          </li>
+          <li><a href="scontent.html">
+              <i class="fab fa-youtube"></i>Social</a>
+          </li>
+          <li>
+            <a href="event.html">
+              <i class="fas fa-paper-plane"></i>Event</a>
+          </li>
+          <li>
+            <a href="support.html">
+              <i class="fas fa-heart"></i>후원</a>
+          </li>
+          <li>
+            <a href="map.html">
+              <i class="fas fa-map-marker-alt"></i>Contact</a>
+          </li>
+        </ul>
       </div>
-    </div><!--/.main-nav-->
+    </div>
+    <!--/.main-nav-->
     <div class="home-content wrapper">
-      <h2 class="page-title"></h2>
-  </div><!--/#home-->
-  
-  </body>
+      <h2 class="page-title">I See U Again</h2>
+      <h3 class="sub-title">"건강한 당신을 또 보고 싶습니다"</h3>
+      <p>한국청년암협회</p>
+      <a class="button" href="establish">자세히 보기</a>
+    </div>
+    <!--/home-content-->
+  </div>
+  <!--/#home-->
+</body>
+
 </html>
