--- a/home/templates/event.html
+++ b/home/templates/event.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="css/bootstrap.css">
     </head>
     <body>
-        <style type="text/css">
+     <!-- <style type="text/css">
             .jumbotron {
                 background-image: url('../static/img/event/event_img1.png');
                 background-size: cover;
@@ -25,7 +25,60 @@
         </div>
         <p class="text-center"><img src="../static/img/event/event_img2.png" alt="" class="img-responsive"></p>
       
+    </div>
+-->  
+  <!-- Page Content -->
+  <div class="container">
+
+    <div class="row">
+
+      <!-- Blog Entries Column -->
+      <div class="col-md-8">
+
+        <h3 class="my-4">이벤트</h3>
+
+        <!-- Blog Post -->
+        <div class="card mb-4">
+          <img class="card-img-top" src="../static/img/event/2-4.png" alt="Card image cap">
+          <div class="card-body">
+            <h2 class="card-title">암 경험자간 소통 모임 기획 및 지원
+            </h2>
+            <p class="card-text">젊은 암 경험자들이 모여 재능 및 정보 공유를 함으로써 경제적/정서적
+                안정감을 찾고, 이들의 권익이 침해되지 않도록 하여 사회에 조속히 복귀할 수
+                있도록 돕는 일을 합니다.</p>
+            <a href="#" class="btn btn-default">자세히 보기 &rarr;</a>
+          </div>
+
+        </div>
+
+        <!-- Blog Post -->
+        <div class="card mb-4">
+          <img class="card-img-top" src="../static/img/event/event_img2.PNG" alt="Card image cap">
+          <div class="card-body">
+            <h2 class="card-title">여행버킷챌린지 ‘앎’ 캠페인
+            </h2>
+            <p class="card-text">암 투병 중이거나 추적 검사 중인 암 경험자들에게 질병을 극복할 수 있다는
+                자신감을 부여하고, 젊은 암 경험자들에 대한 인식 개선을 위한 캠페인을
+                진행합니다.</p>
+            <a href="#" class="btn btn-default">자세히 보기 &rarr;</a>
+          </div>
+       
+        </div>
+
+
       </div>
+
+     </div>
+    <!-- /.row -->
+
+  </div>
+  <!-- /.container -->
+
+ 
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
 {% endblock %}
