서포트 테스트

--- a/home/templates/board.html
+++ b/home/templates/board.html
@@ -18,7 +18,7 @@
 <table>
     {% for list in supportlist %}
     <ul>
-        <li>{{list.name}} <span>{{list.phone_number}}</span></a></li>
+        <li>{{list.name}} <span>{{list.phone_number}}</span><span>{{list.email}}</span></a></li>
     </ul>
     {% endfor %}
 </table>
